2006-09-13  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpcroptool.c (gimp_crop_tool_register): removed
	"Resize" from the tool name and description.

2006-09-13  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c: changed mnemonics (bug #355761).

2006-09-13  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/Makefile.am
	* plug-ins/common/plugin-defs.pl
	* plug-ins/common/lens.c: added Lens Distortion plug-in. Written by
	David Hodson and ported to newer GIMP APIs by Aurimas Juška and me
	(bug #324849).

2006-09-13  Sven Neumann  <sven@gimp.org>

	* app/dialogs/image-new-dialog.c (image_new_create_image): ref the
	context before destroying the dialog.

2006-09-13  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpbrushtool.c: simplified by calling
	gimp_draw_tool_pause/resume() unconditionally (it does no harm,
	regardless of whether the tool is in color picking mode or not).
	Return early in gimp_brush_tool_draw() if color picking is
	enabled.

	* app/tools/gimpsmudgetool.c (gimp_smudge_tool_init): don't enable
	color picking, the tool doesn't use FG or BG.

2006-09-13  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpsourcetool.c (gimp_source_tool_control): chain
	up before clearing src_drawable and src_display, so the draw
	tool can undraw the source marker. Fixes bug #355746.

2006-09-13  Michael Natterer  <mitch@gimp.org>

	* app/paint/gimpclone.c (gimp_clone_motion): don't access the
	src_pickable when cloning from a pattern. Fixes runtime warnings.

2006-09-13  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpmeasuretool.h
	* app/tools/gimppainttool.h: fixed _GET_OPTIONS() macros.

2006-09-13  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpblendtool.c (gimp_blend_tool_active_modifier_key):
	update coordinates in status bar.

2006-09-13  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/pix.c (query): changed label to not include a
	"|" which can be easily confused with a translation context.
